README.md change

--- a/Building a Vehicle Detection Pipeline in cv2 and sklearn.ipynb
+++ b/Building a Vehicle Detection Pipeline in cv2 and sklearn.ipynb
@@ -323,18 +323,18 @@
     "\n",
     "For the new feature extraction techniques, we have two additional parameters for spatial binning size (the size of the shrunked down image), and number of bins in our color histogram.\n",
     "\n",
-    "I found that increasing the size of our spatial bins from 32 (the default in the calssroom module) to 48 gave the model extra power without overfitting, or blowing up the feature space. I suspect that this has to do with the fact that I discarded a lot of valuable spatial color information by using only luma in my HOG features. "
+    "I found that increasing the size of our spatial bins from 32x32 helped but only marginally. In my final model, I use 32x32 to speed up training/prediction times. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 156,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "SPATIAL_SIZE = (48, 48) # Spatial binning dimensions\n",
+    "SPATIAL_SIZE = (32, 32) # Spatial binning dimensions\n",
     "HIST_BINS = 32    # Number of histogram bins"
    ]
   },
